Contacts section added

--- a/resume_new.html
+++ b/resume_new.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Vladislav Nikolaenko portfolio</title>
-	<meta charset="utf-8" />
-</head>
-<body>
-<main class="main"></main>
-</body>
+	<head>
+		<title>Vladislav Nikolaenko portfolio</title>
+		<meta charset="utf-8" />
+	</head>
+	<body>
+		<main class="main">
+			<h1>Vladislav Nikolaenko</h1>
+			<div>
+				<span>Contact information</span>
+			</div>
+		</main>
+	</body>
 </html>
