Add more information to header

--- a/resume_new.html
+++ b/resume_new.html
@@ -7,8 +7,22 @@
 	<body>
 		<main class="main">
 			<h1>Vladislav Nikolaenko</h1>
-			<div>
-				<span>Contact information</span>
+			<div class="header">
+				<div class="general_info">
+					<ul>
+						<li>26 years, live in St. Petersburg, Russia</li>
+						<li>Graduated from Saint-Petersburg State University, MSc, 2016</li>
+						<li>Engineer in Geology</li>
+						<li>Currently working in State Research Geological Institute</li>
+						<li>Interested in Programming and Web-technologies</li>
+						<li>Aimed to improve the life of people</li>
+					</ul>
+				</div>
+				<div class="contacts">
+					<span>Contact information</span>
+						<p class="email"><span class="value">vladislavnikolaenko@gmail.com</span></p>
+						<p class="tg"><span class="value">@witness_me</span></p>
+				</div>
 			</div>
 		</main>
 	</body>
