Add qualification and skills section

--- a/resume_new.html
+++ b/resume_new.html
@@ -24,6 +24,21 @@
 						<p class="tg"><span class="value">@witness_me</span></p>
 				</div>
 			</div>
+
+			<div class="qualifications">
+				<h2>Main qualifications and skills</h2>
+				<div>Basic knowledge of technologies and programming languages:</div>
+				<div>
+					<ul>
+						<li>HTML5, CSS3</li>
+						<li>Git</li>
+						<li>JavaScript</li>
+						<li>Java</li>
+						<li>T-SQL</li>
+						<li>Understanding of Object-oriented programming foundations</li>
+					</ul>
+				</div>
+			</div>
 		</main>
 	</body>
 </html>
