Fill qualifications and skills section

--- a/resume_new.html
+++ b/resume_new.html
@@ -27,15 +27,35 @@
 
 			<div class="qualifications">
 				<h2>Main qualifications and skills</h2>
-				<div>Basic knowledge of technologies and programming languages:</div>
-				<div>
+				<div class="qualifications-container quali-block1">
+					<h3>Basic knowledge of technologies and programming languages:</h3>
+					<div>
+						<ul>
+							<li>HTML5, CSS3</li>
+							<li>Git</li>
+							<li>JavaScript</li>
+							<li>Java</li>
+							<li>T-SQL</li>
+							<li>Understanding of Object-oriented programming foundations</li>
+						</ul>
+					</div>
+				</div>
+
+				<div class="languages">
+					<h3>English</h3>
 					<ul>
-						<li>HTML5, CSS3</li>
-						<li>Git</li>
-						<li>JavaScript</li>
-						<li>Java</li>
-						<li>T-SQL</li>
-						<li>Understanding of Object-oriented programming foundations</li>
+						<li>Advanced user, fluent speech with almost full uderstanding, able to read and understand professional texts</li>
+						<li>IELTS Academic - Overall Band 8.0</li>
+					</ul>
+				</div>
+
+				<div class="extra_skills">
+					<h3>Personal skills</h3>
+					<ul>
+						<li>General technical and computer literacy</li>
+						<li>Teamwork skills and flexibility</li>
+						<li>Ability to make decisions independently</li>
+						<li>Always ready for persistent training and working with the new tasks</li>
 					</ul>
 				</div>
 			</div>
