--- a/resume_new.html
+++ b/resume_new.html
@@ -27,7 +27,7 @@
 
 			<div class="qualifications">
 				<h2>Main qualifications and skills</h2>
-				<div class="qualifications-container quali-block1">
+				<div class="qualifications-container quali-block">
 					<h3>Basic knowledge of technologies and programming languages:</h3>
 					<div>
 						<ul>
@@ -36,12 +36,12 @@
 							<li>JavaScript</li>
 							<li>Java</li>
 							<li>T-SQL</li>
-							<li>Understanding of Object-oriented programming foundations</li>
+							<li>Understanding of object-oriented programming foundations</li>
 						</ul>
 					</div>
 				</div>
 
-				<div class="languages">
+				<div class="languages quali-block">
 					<h3>English</h3>
 					<ul>
 						<li>Advanced user, fluent speech with almost full uderstanding, able to read and understand professional texts</li>
@@ -49,7 +49,7 @@
 					</ul>
 				</div>
 
-				<div class="extra_skills">
+				<div class="extra_skills quali-block">
 					<h3>Personal skills</h3>
 					<ul>
 						<li>General technical and computer literacy</li>
@@ -59,6 +59,7 @@
 					</ul>
 				</div>
 			</div>
+			<div class="education"></div>
 		</main>
 	</body>
 </html>
