Add github profile to contacts

--- a/resume_new.html
+++ b/resume_new.html
@@ -22,6 +22,7 @@
 					<span>Contact information</span>
 						<p class="email"><span class="value">vladislavnikolaenko@gmail.com</span></p>
 						<p class="tg"><span class="value">@witness_me</span></p>
+						<p class="git"><span class="value">https://github.com/Witness-me</span></p>
 				</div>
 			</div>
 
