--- a/resume_new.html
+++ b/resume_new.html
@@ -28,7 +28,7 @@
 
 			<div class="qualifications">
 				<h2>Main qualifications and skills</h2>
-				<div class="qualifications-container quali-block">
+				<div class="skills quali-block">
 					<h3>Basic knowledge of technologies and programming languages:</h3>
 					<div>
 						<ul>
@@ -60,7 +60,19 @@
 					</ul>
 				</div>
 			</div>
-			<div class="education"></div>
+			<div class="education">
+				<h2>Education</h2>
+				<div>
+					<h4>Master of Science, 2016</h4>
+					<h5>Saint-Petersburg State University, Institute of Earth Sciences</h5>
+					<p>During the fall semester in 2015 was on exchange in University of Tromso, Norway</p>
+				</div>
+				<div>
+					<h4>Barchelor of Science, 2014</h4>
+					<h5>Saint-Petersburg State University, Institute of Earth Sciences</h5>
+					<p>During the fall semester in 2013 was on exchange in University of Turku, Finland</p>
+				</div>
+			</div>
 		</main>
 	</body>
 </html>
