Add work experience section

--- a/resume_new.html
+++ b/resume_new.html
@@ -60,6 +60,22 @@
 					</ul>
 				</div>
 			</div>
+
+			<div class="work">
+				<h2>Work experience</h2>
+				<div>
+					<h3>A.P. Karpinsky Russian Geological Research Institute</h3>
+					<div>Engineer (Geologist)</div>
+					<div>October 2014 - December 2019</div>
+					<div>Main responsibilities and accomplishments:</div>
+					<ul>
+						<li>Planning, directing and participating in creation and analysis of analytical data, test results, maps, notes and cross-sections</li>
+						<li>Working in special GIS software and graphic editors (ArcGIS, CorelDRAW, MS Access)</li>
+						<li>One of the authors of digital GIS models, maps and explanatory notes of 3 state geological map series</li>
+					</ul>
+				</div>
+			</div>
+
 			<div class="education">
 				<h2>Education</h2>
 				<div>
