--- a/resume.html
+++ b/resume.html
@@ -1,72 +1,94 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Vladislav Nikolaenko portfolio</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-</head>
-<body>
-
-<div class="main">
-	
-	<h1 id="title">Николаенко Владислав</h1>
-	<div class="basic-info section">
-		<h2 class="title">Контактная информация</h2>
-		<div class="set">
-			<div class="contacts">
-				<p class="email"><span class="value">vladislavnikolaenko@gmail.com</span></p>
-				<p class="tg"><span class="value">@witness_me</span></p>
-			</div>
-		</div>
-	</div>
-	
-	<div class="section section-work">
-		<h2 class="title">Опыт работы</h2>
-			<div class="set">
-				<div class="item">
-					<h3><span class="company l">Всероссийский научно-исследовательский геологический институт имени А.П. Карпинского</span></h3>
-						<p><span class="date r">Октябрь 2014 &mdash;  по настоящее время</span></p>
-						<span class="job_title">Инженер</span>
-						
-						<div class="info">
-							<p>Занимался составлением графических (карт, схем, разрезов) и текстовых материалов (объяснительные записки), характеризующих геологическое строение района работ </p>
-							<p>Осуществлял сбор и систематизацию геологической информации, анализ фондовой и научной литературы, обобщение и интерпретацию данных, составлял промежуточные отчеты</p>
-							<p>Работал в специализированных программах и графических редакторах (ArcGIS, CorelDRAW, MS Access)</p>
-							<p>Один из авторов цифровой модели, графических материалов и объяснительной записке к 2 номенклатурным листам Государственной Геологической Карты; в настоящее время являюсь ответственным исполнителем работ по составлению карты, записки и цифровой модели к одному из листов</p>
-						</div>
+	<head>
+		<title>Vladislav Nikolaenko portfolio</title>
+		<meta charset="utf-8" />
+	</head>
+	<body>
+		<main class="main">
+			<h1>Vladislav Nikolaenko</h1>
+			<div class="header">
+				<div class="general_info">
+					<ul>
+						<li>26 years, live in St. Petersburg, Russia</li>
+						<li>Graduated from Saint-Petersburg State University, MSc, 2016</li>
+						<li>Engineer in Geology</li>
+						<li>Currently working in State Research Geological Institute</li>
+						<li>Interested in Programming and Web-technologies</li>
+						<li>Aimed to improve the life of people</li>
+					</ul>
+				</div>
+				<div class="contacts">
+					<span>Contact information</span>
+						<p class="email"><span class="value">vladislavnikolaenko@gmail.com</span></p>
+						<p class="tg"><span class="value">@witness_me</span></p>
+						<p class="git"><span class="value">https://github.com/Witness-me</span></p>
 				</div>
 			</div>
-	</div>
-			<div class="section section-qualifications">
-			<h2 class="title">Квалификация</h2>
-			<div class="set">
-							<div class="item">
-								<span class="info"><span>Базовые знания технологий и языков:</span><div><ul><li><span>Java</span></li><li><span>HTML, CSS</span></li><li><span>T-SQL</span></li><li><span>Git</span></li><li><span>JavaScript</span></li><li><span>C#</span></li><li>Понимание основ объектно-ориентированного программирования</li></ul><div><span><br /></span></div><div><span><span>Английский язык</span>: Advanced, свободное разговорное общение и чтение профессиональной литературы</span></div><div><ul><li><span>Сертификат IELTS Academic - Overall Band 8.0</span></li></ul><div><span><br /></span></div><div><span>Дополнительное образование</span>:</div><div><ul><li><span style="font-style:italic;">сентябрь - декабрь 2018 г. </span><span>- </span>очные курсы "Инженер-программист" при университете ИТМО (основные изученные <br />технологии - Java, Transact-SQL, MS Access, C#)</li></ul><div><br /></div></div><div><span>Дополнительные навыки:</span></div><div><ul><li>Общая техническая и компьютерная грамотность</li><li>Умение работать в команде</li><li>Способность самостоятельно принимать решения</li><li>Готов к постоянному обучению и работе с новыми задачами</li></ul></div></div></div></span>
-							</div>
-						</div>
-			<div class="clear"> </div>
-		</div>
-			<div class="section section-education">
-			<h2 class="title">Образование</h2>
-			<div class="set">
-						<div class="item">
-							<h3><span class="course l">Институт наук о Земле, магистр географии</span>
-						<span class="date r">2014 &mdash; 2016</span>
-							</h3>
-							<div class="clear"> </div>
-							<span class="school">САНКТ-ПЕТЕРБУРГСКИЙ ГОСУДАРСТВЕННЫЙ УНИВЕРСИТЕТ (СПБГУ)</span><div class="info">С сентября по декабрь 2015 года проходил обучение по программе обмена в университете Тромсё, Норвегия</div><span class="clear"> </span>
-						</div>
-						
-						<div class="item">
-							<h3><span class="course l">Институт наук о Земле, бакалавр географии</span>
-						<span class="date r">2010 &mdash; 2014</span>
-							</h3>
-							<div class="clear"> </div>
-							<span class="school">САНКТ-ПЕТЕРБУРГСКИЙ ГОСУДАРСТВЕННЫЙ УНИВЕРСИТЕТ (СПБГУ)</span><div class="info">С сентября по декабрь 2013 года проходил обучение по программе обмена в университете Турку, Финляндия</div><span class="clear"> </span>
-						</div>
-						</div>
-			<div class="clear"> </div>
-		</div>
-		
-</div>
-</body>
+
+			<div class="qualifications">
+				<h2>Main qualifications and skills</h2>
+				<div class="skills quali-block">
+					<h3>Basic knowledge of technologies and programming languages:</h3>
+					<div>
+						<ul>
+							<li>HTML5, CSS3</li>
+							<li>Git</li>
+							<li>JavaScript</li>
+							<li>Java</li>
+							<li>T-SQL</li>
+							<li>Understanding of object-oriented programming foundations</li>
+						</ul>
+					</div>
+				</div>
+
+				<div class="languages quali-block">
+					<h3>English</h3>
+					<ul>
+						<li>Advanced user, fluent speech with almost full uderstanding, able to read and understand professional texts</li>
+						<li>IELTS Academic - Overall Band 8.0</li>
+					</ul>
+				</div>
+
+				<div class="extra_skills quali-block">
+					<h3>Personal skills</h3>
+					<ul>
+						<li>General technical and computer literacy</li>
+						<li>Teamwork skills and flexibility</li>
+						<li>Ability to make decisions independently</li>
+						<li>Always ready for persistent training and working with the new tasks</li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="work">
+				<h2>Work experience</h2>
+				<div>
+					<h3>A.P. Karpinsky Russian Geological Research Institute</h3>
+					<div>Engineer (Geologist)</div>
+					<div>October 2014 - December 2019</div>
+					<div>Main responsibilities and accomplishments:</div>
+					<ul>
+						<li>Planning, directing and participating in creation and analysis of analytical data, test results, maps, notes and cross-sections</li>
+						<li>Working in special GIS software and graphic editors (ArcGIS, CorelDRAW, MS Access)</li>
+						<li>One of the authors of digital GIS models, maps and explanatory notes of 3 state geological map series</li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="education">
+				<h2>Education</h2>
+				<div>
+					<h4>Master of Science, 2016</h4>
+					<h5>Saint-Petersburg State University, Institute of Earth Sciences</h5>
+					<p>During the fall semester in 2015 was on exchange in University of Tromso, Norway</p>
+				</div>
+				<div>
+					<h4>Barchelor of Science, 2014</h4>
+					<h5>Saint-Petersburg State University, Institute of Earth Sciences</h5>
+					<p>During the fall semester in 2013 was on exchange in University of Turku, Finland</p>
+				</div>
+			</div>
+		</main>
+	</body>
 </html>
