Add avatar and lower its size

--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,9 @@
 		<main class="main">
 			<h1>Vladislav Nikolaenko</h1>
 			<div class="header">
+				<div class="avatar">
+					<img src="image/avatar.jpg" alt="" width="200 px">
+				</div>
 				<div class="general_info">
 					<ul>
 						<li>26 years, live in St. Petersburg, Russia</li>
