Add thesis topics

--- a/resume.html
+++ b/resume.html
@@ -84,11 +84,13 @@
 				<div>
 					<h4>Master of Science, 2016</h4>
 					<h5>Saint-Petersburg State University, Institute of Earth Sciences</h5>
+					<p>Master thesis topic: "Surficial subaereal sediments of West-Siberian Arctic"</p>
 					<p>During the fall semester in 2015 was on exchange in University of Tromso, Norway</p>
 				</div>
 				<div>
 					<h4>Barchelor of Science, 2014</h4>
 					<h5>Saint-Petersburg State University, Institute of Earth Sciences</h5>
+					<p>Bachelor thesis topic: "Assessment of tourist potential of Putorana plateau lakes (case study of Lama lake)"</p>
 					<p>During the fall semester in 2013 was on exchange in University of Turku, Finland</p>
 				</div>
 			</div>
